feat: pelengkapan portfolio

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <li>
                   Membangun project personal yang dapat digunakan untuk umum
                 </li>
+                <li>Men-deploy aplikasi ke platform serverless Vercel</li>
               </ul>
             </li>
           </ul>
@@ -116,8 +117,8 @@
       </section>
       <section id="skills">
         <div class="card">
-          <h2>Skill</h2>
-          <div class="tech-stacks">
+          <h2 style="margin-bottom: 20px">Skill</h2>
+          <article class="tech-stacks">
             <section style="text-align: center">
               <img
                 loading="lazy"
@@ -131,6 +132,13 @@
                 src="https://www.cdnlogo.com/logos/c/18/css.svg"
               />
               <div>CSS</div>
+            </section>
+            <section style="text-align: center">
+              <img
+                loading="lazy"
+                src="https://www.cdnlogo.com/logos/t/58/tailwind-css.svg"
+              />
+              <div>TailwindCSS</div>
             </section>
             <section style="text-align: center">
               <img
@@ -189,14 +197,98 @@
               />
               <div>Node.js</div>
             </section>
-          </div>
+          </article>
         </div>
       </section>
       <section id="portfolio">
         <div class="card">
           <h2>Portfolio</h2>
           <div class="portfo-articles">
-            <article>
+            <article class="card">
+              <header>
+                <h3>MuhReezky Company Profile</h3>
+              </header>
+              <img
+                src="./images/compro.png"
+                alt="MuhReezky Compro"
+                loading="lazy"
+              />
+              <section>
+                Website Company Profile untuk usaha kecil yang saya miliki,
+                MuhReezky Software Studio. Menawarkan jasa untuk pembangunan
+                software dan aplikasi untuk bisnis dan tugas sekolah/kampus.
+                Pengunjung dapat mengirim pesan pada admin melalui contact form
+              </section>
+              <a
+                href="https://muhreezky.github.io/compro"
+                target="_blank"
+                class="button poppins-bold no-decoration"
+              >
+                Buka
+              </a>
+            </article>
+            <article class="card">
+              <header>
+                <h3>Undangan Nikah</h3>
+              </header>
+              <img
+                src="./images/undangan.png"
+                alt="Undangan Nikahan"
+                loading="lazy"
+              />
+              <section>
+                Website undangan pernikahan sample, terdapat waktu dan tempat,
+                background image yang estetik, dan terdapat formulir konfirmasi
+                kehadiran di acara
+              </section>
+              <a
+                href="https://muhreezky.github.io/undangan-nikah"
+                target="_blank"
+                class="button poppins-bold no-decoration"
+              >
+                Buka
+              </a>
+            </article>
+            <article class="card">
+              <header>
+                <h3>BMI Calculator</h3>
+              </header>
+              <img
+                src="./images/bmi-calculator.png"
+                alt="Hitung BMI"
+                loading="lazy"
+              />
+              <section>
+                Website sederhana untuk menghitung indeks masa tubuh /
+                <i>Body Mass Index</i> dan menentukan apakah hasilnya normal
+                atau tidak
+              </section>
+              <a
+                href="https://muhreezky.github.io/bmi-calculate"
+                target="_blank"
+                class="button poppins-bold no-decoration"
+              >
+                Buka
+              </a>
+            </article>
+            <article class="card">
+              <header>
+                <h3>Marathon Registration</h3>
+              </header>
+              <img src="./images/marathon.png" alt="" loading="lazy" />
+              <section>
+                Website sederhana untuk contoh formulir pendaftaran lomba lari,
+                menggunakan Web3Forms untuk submit contact form
+              </section>
+              <a
+                href="https://muhreezky.github.io/marathon"
+                class="button poppins-bold no-decoration"
+                target="_blank"
+              >
+                Buka
+              </a>
+            </article>
+            <article class="card">
               <header>
                 <h3 style="margin: 0">Kana Charenji</h3>
               </header>
@@ -211,8 +303,15 @@
                 menemukan mana jawaban yang paling benar di setiap pertanyaan.
                 Jika nyawa habis, maka permainan berakhir
               </section>
+              <a
+                href="https://keynerdy.vercel.app"
+                class="button poppins-bold no-decoration"
+                target="_blank"
+              >
+                Buka
+              </a>
             </article>
-            <article>
+            <article class="card">
               <header>
                 <h3 style="margin: 0">Oddity Coffee Points</h3>
               </header>
@@ -227,8 +326,15 @@
                 penggunanya mendapatkan bonus cashback setelah melakukan
                 pembayaran dalam jumlah tertentu di outlet Oddity Coffee
               </section>
+              <a
+                href="https://cashback.odditycoffee.id"
+                target="_blank"
+                class="button poppins-bold no-decoration"
+              >
+                Buka
+              </a>
             </article>
-            <article>
+            <article class="card">
               <header>
                 <h3>Rahazzia</h3>
               </header>
@@ -240,13 +346,13 @@
               <section>
                 Aplikasi berbasis web untuk menerima dan mengirim pesan rahasia
                 kepada pemilik akun, dibuat menggunakan full stack Next.js dan
-                MongoDB Prisma
+                MongoDB Prisma. Dideploy ke dalam platform serverless Vercel
               </section>
               <a
                 class="button poppins-bold no-decoration"
                 href="https://rahazzia.vercel.app"
                 target="_blank"
-                >Lihat</a
+                >Buka</a
               >
             </article>
           </div>
