feat: all sections clear

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <ul class="nav-links">
           <li><a href="#about">Tentang</a></li>
           <li><a href="#experiences">Pengalaman</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#skills">Skill</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#certifs">Sertifikat</a></li>
-          <li><a href="#organisasi">Organisasi</a></li>
           <li><a href="#education">Pendidikan</a></li>
+          <li><a href="#organization">Organisasi</a></li>
         </ul>
         <div class="nav-hamburger" id="nav-hamburger">
           <div class="line"></div>
@@ -356,6 +356,97 @@
               >
             </article>
           </div>
+        </div>
+      </section>
+      <section id="certifs">
+        <div class="card">
+          <h2 style="margin-bottom: 20px">Sertifikat</h2>
+          <article class="certif-article">
+            <header>
+              <h3>Sekolah Beta Intensif - Nuxt.js</h3>
+            </header>
+            <section>
+              Diterbitkan oleh : <b>Alkademi.id</b><br />
+              Tanggal terbit : <b>23 Oktober 2023</b>
+            </section>
+            <a
+              class="button poppins-medium no-decoration"
+              target="_blank"
+              href="https://ems.1000startupdigital.id/downloads/certificates/certificate_1351698067670_123256.pdf?t=1701052098"
+            >
+              Lihat Sertifikat
+            </a>
+          </article>
+          <article class="certif-article">
+            <header>
+              <h3>Purwadhika Final Project Certificate</h3>
+            </header>
+            <section>
+              Diterbitkan oleh : <b>Purwadhika</b><br />
+              Tanggal terbit : <b>15 September 2023</b>
+            </section>
+            <a
+              href="https://drive.google.com/file/d/1W0Nt9zg8aDjn_D-yvVFBb6ZiI2FTjDIs/view"
+              target="_blank"
+              class="button poppins-medium no-decoration"
+            >
+              Lihat Sertifikat
+            </a>
+          </article>
+          <article class="certif-article">
+            <header>
+              <h3>Sinarmas Purwadhika Web Development Bootcamp</h3>
+            </header>
+            <section>
+              Diterbitkan oleh : <b>Purwadhika</b><br />
+              Tanggal terbit : <b>14 Agustus 2023</b>
+            </section>
+            <a style="width: auto !important;" href="https://drive.google.com/file/d/1CwKgd7pfyqtRl-CY12IS9xnph8Y1QjnE/view" class="button poppins-medium no-decoration" target="_blank">
+              Lihat Sertifikat
+            </a>
+          </article>
+        </div>
+      </section>
+      <section id="education" class="experiences">
+        <div class="card">
+          <h2>Pendidikan</h2>
+          <ul>
+            <li>
+              <div style="display: flex; justify-content: space-between;">
+                <h3>Universitas Esa Unggul</h3>
+                <div>Agustus 2022 - sekarang</div>
+              </div>
+              <div>Teknik Informatika</div>
+            </li>
+            <li>
+              <div style="display: flex; justify-content: space-between;">
+                <h3>SMKS Yarsi Medika</h3>
+                <div>Juni 2019 - Juni 2022</div>
+              </div>
+              <div>Analis Kesehatan</div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="organization" class="experiences">
+        <div class="card">
+          <h2>Organisasi</h2>
+          <ul>
+            <li>
+              <div style="display: flex; justify-content: space-between;">
+                <h3>Marawis SMK Yarsi Medika</h3>
+                <div>Juli 2019 - Januari 2022</div>
+              </div>
+              <div>Ketua</div>
+            </li>
+            <li>
+              <div style="display: flex; justify-content: space-between;">
+                <h3>OSIS SMK Yarsi Medika</h3>
+                <div>Januari 2020 - Januari 2021</div>
+              </div>
+              <div>SIE Keagamaan</div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
